2007-05-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Added command 'tempdirReset' to allow users to
	* fileutil.man: clear the information set via 'tempdir path'.
	* pkgIndex.tcl: Bumped package to version 1.13. Additionally
	  extended relative-url computation to make the result of an
	  edge-case nicer looking (result was ok, but not
	  optimal). Extended testsuite for this. Extended error output
	  when computation of relative path fails.

2007-03-28  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::fileType): Added definitions to
	* pkgIndex.tcl: recognize Apple .icns files.
	* fileutil.man:  Bumped version up to 1.12.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-03-12  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::TempDir): Added code to collect all
	* pkgIndex.tcl: problems encountered, to be reported if no temp
	* fileutil.man: directory could be found, to aid in the
	  debugging of the situation. Bumped version up to 1.11.

2007-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Added a command [fileutil::fullnormalize].
	* fileutil.man: Documented it, extended the testsuite. Bumped
	* filetuil.test: version up to 1.10. Removed nonsensical
	* pkgIndex.tcl: [file join one_element] calls from the testsuite.

2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Marked all 20 permission dependent tests as
	  'notRoot' as they cannot fail when the superuser executes the
	  testsuite.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Rewritten to use new features for handling the
	  environment.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*