@@ -2,4 +2,4 @@ if {![package vsatisfies [package provide Tcl] 8.2]} {return}
 package ifneeded fileutil 1.13 [list source [file join $dir fileutil.tcl]]
 
 if {![package vsatisfies [package provide Tcl] 8.3]} {return}
-package ifneeded fileutil::traverse 0.1 [list source [file join $dir traverse.tcl]]
+package ifneeded fileutil::traverse 0.2 [list source [file join $dir traverse.tcl]]
